--- a/app/src/main/res/layout/activity_layout2.xml
+++ b/app/src/main/res/layout/activity_layout2.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="221dp"
         android:layout_marginEnd="140dp"
         android:layout_marginRight="140dp"
-        android:text="this is page 2"
+        android:text="this is page 课程"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
