--- a/app/src/main/res/layout/activity_layout3.xml
+++ b/app/src/main/res/layout/activity_layout3.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="221dp"
         android:layout_marginEnd="140dp"
         android:layout_marginRight="140dp"
-        android:text="this is page 3"
+        android:text="this is page 活动"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
